[build-system]
requires = ["uv_build>=0.7.19,<1.0.0"]
build-backend = "uv_build"

[project]
name = "nixtla"
version = "0.7.3"
description = "Python SDK for Nixtla API (TimeGPT)"
authors = [
    {name = "Nixtla", email = "business@nixtla.io"}
]
license = {text = "Apache Software License 2.0"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["time-series", "forecasting", "gpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "annotated-types",
    "httpx[zstd]",
    "narwhals>=2.11.0",
    "orjson",
    "pandas<3.0.0",
    "pydantic>=1.10",
    "tenacity",
    "tqdm",
    "utilsforecast>=0.2.15",
]

[project.optional-dependencies]
dev = [
    "black",
    "datasetsforecast",
    "fire",
    "hierarchicalforecast",
    "ipython<=8.32.0",
    "ipywidgets",
    "jupyterlab",
    "neuralforecast",
    "numpy<2",
    "plotly",
    "polars",
    "pre-commit",
    "pyreadr<0.5.3",
    "python-dotenv",
    "pyyaml",
    "ruff",
    "statsforecast",
    "tabulate",
    "shap",
    "pytest",
    "pytest-cov",
    "pytest-rerunfailures",
    "pyarrow<21.0.0",
    "mlforecast",
    "lightgbm",
    "utilsforecast[plotting]",
    "holidays",
    "pandas_market_calendars",
    "pip-licenses",
    "pyspark<=4.0.1",
]
distributed = [
    "fugue[dask,ray,spark]>=0.9.6",
    "dask<=2024.12.1",
    "pandas<2.2",
    "ray<=2.52.1",
]
plotting = [
    "utilsforecast[plotting]",
]
date_extras = [
    "holidays",
    "pandas_market_calendars",
]
snowflake = [
    "snowflake-snowpark-python",
    "fire",
    "rich",
]

[project.urls]
Homepage = "https://github.com/Nixtla/nixtla/"
Documentation = "https://nixtlaverse.nixtla.io/"
Repository = "https://github.com/Nixtla/nixtla/"

[tool.uv.build-backend]
module-root = "."

[tool.ruff.lint]
select = [
    "F",  # pyflakes
]

[tool.pytest.ini_options]
markers = [
    "distributed_run: mark test as requiring distributed run, such as those depending on Ray, Spark frameworks",
    "spark_run: mark test execution related to Spark framework",
    "ray_run: mark test execution related to Ray framework",
    "snowflake: mark test as requiring Snowflake connection and API key",
]
testpaths = ["nixtla_tests"]
addopts = [
    "--cov=python/statsforecast",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]

[tool.coverage.run]
omit = [
    "nixtla/scripts/snowflake_install_nixtla.py",  # Deployment script, not core library
]
